# aether-mcp-server

./: .editorconfig  .env.example  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  clippy.toml  install.js  install.ps1  lhm.plugin.json  package.json
.agents/skills/: architecture.md  build-and-test.md  code-style.md  security.md  testing.md  tool-pattern.md  win32-patterns.md
.agents/skills/aether-windows-mcp/: SKILL.md
.cargo/: config.toml
.cursor/rules/: aether-01.mdc  aether-mcp.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LOBEHUB_STANDARDS.md  release_notes_v1.0.1.md  release_notes_v1.1.0.md
src/: audit.rs  command.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/tools/: automation.rs  common.rs  filesystem.rs  gui.rs  mod.rs  network.rs  process.rs  registry.rs  security.rs  service.rs  sysinfo.rs  user.rs
tests/: config_tests.rs  error_tests.rs  integration_tests.rs  tool_dispatch_tests.rs
