[package]
name = "aether-mcp-server"
version = "1.1.0"
edition = "2021"
description = "AETHER_01 — Windows MCP Server with 99% system management coverage"

[dependencies]
rmcp = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_RemoteDesktop",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Dns",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Performance",
    "Win32_System_Time",
    "Win32_System_Shutdown",
    "Win32_System_EventLog",
    "Win32_System_TaskScheduler",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Bluetooth",
] }
windows-registry = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
